<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ExamSchedule">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:background="@drawable/shape"
      android:padding="16dp"
      android:layout_margin="16dp"
      android:id="@+id/linear_exam_date">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/timeicon"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Date"
        android:textSize="20sp"
        android:id="@+id/exam_date"
        android:paddingLeft="16dp"/>
  </LinearLayout>



  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:hint="@string/exam_time"
      android:id="@+id/layoutexamtime"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
    <AutoCompleteTextView
        android:id="@+id/exam_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"/>
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:hint="@string/course"
      android:id="@+id/layoutexamcourse"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
    <AutoCompleteTextView
        android:id="@+id/course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"/>
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:hint="@string/exam_venue"
      android:id="@+id/layoutexamvenue"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

    <AutoCompleteTextView
        android:id="@+id/exam_venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none" />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:hint="@string/exam_semester"
      android:id="@+id/layoutexamsemester"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

    <AutoCompleteTextView
        android:id="@+id/exam_semester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:hint="@string/exam_year"
      android:id="@+id/layoutexamsession"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/exam_year"
        android:inputType="none"
        />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.button.MaterialButton
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Submit"
      android:id="@+id/exam_Schedule_submit"
      android:textSize="20sp"
      android:padding="10dp"
      android:layout_margin="16dp"
      android:textAlignment="center"/>

</LinearLayout>